# Loyd-Bank-Fraud-Detection

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  mlflow.db  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
notebooks/: EDA.ipynb  mlflow.db
src/api/: main.py
src/data/: load_data.py  preprocess.py  split.py  transformation.py
src/features/: build_features.py
src/models/: evaluate.py  evaluate_models.py  train.py  train_final_model.py  tune.py  tune_logreg.py
src/serving/: inference.py
src/serving/model/: MLmodel  conda.yaml  input_example.json  model.pkl  registered_model_meta  requirements.txt
src/serving/model/49b0b2861e544aa98a64014b37c12022/: meta.yaml
src/serving/model/49b0b2861e544aa98a64014b37c12022/artifacts/: feature_columns.txt  preprocessing.pkl
src/serving/model/49b0b2861e544aa98a64014b37c12022/artifacts/model/: model.pkl  python_env.yaml
src/serving/model/49b0b2861e544aa98a64014b37c12022/artifacts/model/metadata/: MLmodel  conda.yaml  (+1 more)
src/serving/model/49b0b2861e544aa98a64014b37c12022/metrics/: data_quality_pass  f1  precision  pred_time  recall  roc_auc  train_time
src/serving/model/49b0b2861e544aa98a64014b37c12022/outputs/m-4c388e2f13e2437eabeda44da28ad177/: meta.yaml
src/serving/model/49b0b2861e544aa98a64014b37c12022/tags/: mlflow.runName  mlflow.source.name
src/ui/: streamlit_app.py
src/utils/: logger.py  validate_data.py
tests/: prepare_processed_data.py  run_pipeline.py  test_fastapi.py  test_pipeline_phase1_data_features.py  test_pipeline_phase2_modeling.py
